--- a/.github/workflows/delete-branch.yml
+++ b/.github/workflows/delete-branch.yml
@@ -17,7 +17,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the branch name from the event payload
-          branch=${{ github.ref }}
-          branch=${{ branch/refs\/heads\// }}
+          branch="${GITHUB_REF#refs/heads/}"
           # Delete the branch
           git push origin --delete $branch
