--- a/.github/workflows/delete-branch.yml
+++ b/.github/workflows/delete-branch.yml
@@ -8,11 +8,11 @@ on:
 jobs:
   delete-branch:
     runs-on: ubuntu-latest
+    container:
+      image: node:16
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          node-version: '16'
 
       - name: Delete merged branch
         env:
