--- a/.github/workflows/delete-branch.yml
+++ b/.github/workflows/delete-branch.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Delete merged branch
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the branch name from the event payload
           branch="${GITHUB_REF#refs/heads/}"
