--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "next": "^13.4.4",
     "react": "^18.2.0",
