--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.22.1",
     "next": "^13.4.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-responsive-carousel": "^3.2.23",
