--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
+    "moment": "^2.29.4",
     "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-calendar": "^4.2.1",
+    "react-big-calendar": "^1.8.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-responsive-carousel": "^3.2.23",
