--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
