--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.5.6",
