--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-masonry-css": "^1.0.16",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-swipeable": "^7.0.1",
