--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.18.1",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
