--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-big-calendar": "^1.8.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-masonry-css": "^1.0.16",
+    "react-places-autocomplete": "^7.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-swipeable": "^7.0.1",
