--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-masonry-css": "^1.0.16",
     "react-places-autocomplete": "^7.3.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
     "react-swipeable": "^7.0.1",
     "slick-carousel": "^1.8.1"
