--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.29.0",
     "react-swipeable": "^7.0.1",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
