--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "firebase": "^9.23.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^13.4.4",
     "react": "^18.2.0",
