Added initial playwright and added Head to index.js

--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@playwright/test": "^1.37.1",
     "@react-google-maps/api": "^2.18.1",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "firebase": "^9.23.0",
+    "kill-port": "^2.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^13.4.4",
+    "playwright": "^1.37.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.0",
     "react-bootstrap": "^2.7.4",
