--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@playwright/test": "^1.37.1",
     "@react-google-maps/api": "^2.18.1",
     "@sendgrid/mail": "^7.7.0",
+    "aws-sdk": "^2.1450.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "firebase": "^9.23.0",
