--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@playwright/test": "^1.37.1",
     "@react-google-maps/api": "^2.18.1",
     "@sendgrid/mail": "^7.7.0",
@@ -28,6 +24,7 @@
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "firebase": "^9.23.0",
+    "firebase-admin": "^12.0.0",
     "kill-port": "^2.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
