LITTERPIC-257 - Added ambassador badge and text to users who are ambassadors on their profile and stories they have posted.

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ out/
 /.idea/codeStyles/codeStyleConfig.xml
 /.idea/git_toolbox_prj.xml
 .vercel
-/utils/sumLitterWeight.js
+/utils/litterpic-fa0bb-key.json
 /secrets/
