--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Next.js website for LitterPic.org",
   "main": "index.js",
   "scripts": {
-    "dev": "sass styles/styles.scss styles/styles.css --watch & next dev",
+    "dev": "concurrently \"npm run compile-sass\" \"next\"",
+    "compile-sass": "echo 'Compiling SASS...' && sass styles/styles.scss styles/styles.css --watch",
     "build": "next build",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -47,6 +48,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "sass": "^1.63.4",
     "sass-lint-auto-fix": "^0.21.2"
   }
