--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "compile-sass": "echo 'Compiling SASS...' && sass styles/styles.scss styles/styles.css --watch",
     "build": "next build",
     "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "playwright test",
+    "test:debug": "PWDEBUG=1 playwright test",
     "export": "next export",
     "lint": "sass-lint -v",
     "lint:fix": "sass-lint-auto-fix",
@@ -18,7 +19,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "@playwright/test": "^1.37.1",
+    "@playwright/test": "^1.42.1",
     "@react-google-maps/api": "^2.18.1",
     "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1450.0",
@@ -45,7 +46,8 @@
     "react-slick": "^0.29.0",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tcp-port-used": "^1.0.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
