--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.1450.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "firebase": "^9.23.0",
     "firebase-admin": "^12.0.0",
     "kill-port": "^2.0.1",
