--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "@playwright/test": "^1.42.1",
     "@react-google-maps/api": "^2.18.1",
     "@sendgrid/mail": "^7.7.0",
+    "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1450.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.7",
     "firebase": "^9.23.0",
     "firebase-admin": "^12.0.0",
     "kill-port": "^2.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^13.4.4",
+    "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.0",
     "react-bootstrap": "^2.7.4",
@@ -48,6 +51,7 @@
     "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "tailwindcss": "^3.4.13",
     "tcp-port-used": "^1.0.2"
   },
   "devDependencies": {
