--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.3.3",
     "tailwindcss": "^3.4.13",
     "tcp-port-used": "^1.0.2"
   },
