--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-slick": "^0.29.0",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.34.1",
     "slick-carousel": "^1.8.1",
     "swr": "^2.3.3",
     "tailwindcss": "^3.4.13",
